新增qwen-long支持，修复若干bug